# bucha

./: .gitignore  README.md  pyproject.toml
assets/: restaurants.csv
bucha/: .env-example  bot.py  config.py  logger.py  main.py  scraper.py  slack_bot.py  utils.py
scripts/: bucha.sh  build.sh  cleanup.sh  deploy.sh  push-to-ecr.sh  run.sh
src/: .env-example  Dockerfile  README.md  main.py  pyproject.toml
src/assets/: restaurants.csv
src/bucha/: config.py  logger.py  main.py  messenger.py  scraper.py  utils.py
src/scripts/: cleanup.sh
terraform/: main.tf  providers.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/stacks/scraper/: .terraform.lock.hcl  scraper.tf  tf.providers.tf  tf.variables.tf
terraform/stacks/scraper/workspaces/: .example.tfvars
