[tool.poetry]
name = "bucha"
version = "0.1.0"
description = ""
authors = ["Manuel Fideles <manuel.fideles@redlightsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-sdk = "^3.31.0"
lxml-html-clean = "^0.1.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.23.1"
pyshorteners = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
